--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" ref="image/favicon.ico">
+<link rel="icon" ref="/image/favicon.ico">
     <title>サーバー運営者</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -226,9 +226,9 @@
             <button class="dark">ダークモード</button>
         </div>
     </div>
-        <button class="btn" onclick="window.location.href='https://kinakomushiJP.github.io/discordserver_site/'">ホーム</button>
+        <button class="btn" onclick="window.location.href='index.html'">ホーム</button>
         <button class="nobtn">運営一覧</button>
-        <button class="btn" onclick="window.location.href='https://kinakomushiJP.github.io/discordserver_sitekousin/'">サイト更新情報</button>
+        <button class="btn" onclick="window.location.href='html/version/index.html'">サイト更新情報</button>
     <div class="container">
         <h1>サーバー関係者</h1>
         <div class="kina">
