--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
     </div>
 
         <button class="nobtn">ホーム</button>
-    <button class="btn" onclick="window.location.href='/html/admin/index.html'">運営一覧</button>
-    <button class="btn" onclick="window.location.href='/html/version/index.html'">サイト更新情報</button>
+    <button class="btn" onclick="window.location.href='html/admin/index.html'">運営一覧</button>
+    <button class="btn" onclick="window.location.href='html/version/index.html'">サイト更新情報</button>
 <p> </p>
     <div class="container">
         <h1>"絵文字雑談サーバー"へ参加しよう！</h1>
