--- a/home.html
+++ b/home.html
@@ -230,7 +230,7 @@
         <div class="step">
     <h2>サーバーについての説明</h2>
     <p><strong>沢山の絵文字を使って雑談！ゲームしながら通話をしたり、アイテムのトレードをしたりサーバー内の通貨を使って特別なロールなどの商品を買ったりして楽しもう！</strong></p>
-    <img id="server-img" src="image/main_dark" alt="サーバー画像">
+    <img id="server-img" src="image/main_dark.png" alt="サーバー画像">
 </div>
         <div class="rule">
             <h2>サーバーを利用する前に</h2>
