--- a/home.html
+++ b/home.html
@@ -235,11 +235,12 @@
         <div class="step">
     <h2>サーバーについての説明</h2>
     <p><strong>沢山の絵文字を使って雑談！ゲームしながら通話をしたり、アイテムのトレードをしたりサーバー内の通貨を使って特別なロールなどの商品を買ったりして楽しもう！</strong></p>
- <img
+<img
   id="server-img"
   class="fade-img"
-  src="image/main_dark.png"
+  src=""
   alt=""
+>
 >
 </div>
         <div class="rule">
