--- a/home.html
+++ b/home.html
@@ -238,9 +238,10 @@
 <img
   id="server-img"
   class="fade-img"
-  src=""
+  src="image/main_dark.png"
   alt=""
 >
+
 </div>
         <div class="rule">
             <h2>サーバーを利用する前に</h2>
