--- a/home.html
+++ b/home.html
@@ -238,10 +238,9 @@
 <img
   id="server-img"
   class="fade-img"
-  src="image/main_dark.png"
+  src="image/main_light.png"
   alt=""
 >
-
 </div>
         <div class="rule">
             <h2>サーバーを利用する前に</h2>
