--- a/version.html
+++ b/version.html
@@ -229,9 +229,16 @@
         <button class="btn" onclick="window.location.href='home.html'">ホーム</button>
     <button class="btn" onclick="window.location.href='admin.html'">運営一覧</button>
     <button class="nobtn">サイト更新情報</button>
+<p> </p>
     <div class="container">
-
         <h1>サイト更新情報</h1>
+            <div class="daiji">
+            <h2>v1.3.0　26/2/9</h2>
+            <p>サイトを一つのレポジトリにしました。</p>
+            <p>メニューボタンの変更。</p>
+            <p>画像も背景に合わせてフェードで切り替わるようになりました。</p>
+            <p>ボタンとテキストの距離の変更やその他の細かな変更をしました。</p>
+        </div>
          <div class="hutu">
             <h2>v1.2.1　26/2/7</h2>
             <p>ボタンの位置と見た目を変更しました。</p>
@@ -242,11 +249,11 @@
         </div>
         <div class="tyoto">
             <h2>v1.1.2　26/2/1</h2>
-            <p>ボタンの順を変更しました</p>
+            <p>ボタンの順を変更しました。</p>
         </div>
         <div class="hutu">
             <h2>v1.1.1　26/2/1</h2>
-            <p>更新情報を追加しました</p>
+            <p>更新情報を追加しました。</p>
             <p>ダークモードに変更しました。</p>
         </div>
         <div class="hutu">
