--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@ body.light-mode .header button:hover {
      <header class="header">
     <button data-scroll="home">ホーム</button>
     <button data-scroll="admin">運営一覧</button>
-    <button data-scroll="version">サイト更新情報</button>
     <button data-scroll="otoiawase">お問い合わせ</button>
+    <button data-scroll="version">サイト更新情報</button>
     <button class="light"><strong>ライトモード</strong></button>
     <button class="dark"><strong>ダークモード</strong></button>
 </header>
@@ -418,14 +418,32 @@ body.light-mode .header button:hover {
         </div>
     </div>
       </section>
-      
+
+            <section id="otoiawase">
+<p> </p>
+        <div class="container">
+        <h1>お問い合わせ</h1>
+        <div class="rize">
+            <h2>お問い合わせ方法</h2>
+            <h2>1,</h2>
+            <p>Discordで<strong>@kina_int3 </strong>にDM(ダイレクトメッセージ)を送信する。</p>
+            <h2>2,</h2>
+            <p>Discordサーバーの専用チャンネル(#お問い合わせ)へ送信する。</p>
+        </div>
+    </div>
+
+      </section>
       <section id="version">
     <p> </p>
     <div class="container">
         <h1>サイト更新情報</h1>
+            <div class="daiji">
+            <h2>v1.5.0　26/2/19</h2>
+            <p>メニューを変更しました。</p>
+        </div>
             <div class="hutu">
             <h2>v1.4.1　26/2/16</h2>
-            <p>メニューの修正とお問い合わせ方法の追加</p>
+            <p>メニューの修正とお問い合わせ方法をついかしました。</p>
         </div>
             <div class="daiji">
             <h2>v1.4.0　26/2/14</h2>
@@ -467,20 +485,6 @@ body.light-mode .header button:hover {
         </div>
     </div>
   </section>
-
-      <section id="otoiawase">
-<p> </p>
-        <div class="container">
-        <h1>お問い合わせ</h1>
-        <div class="rize">
-            <h2>お問い合わせ方法</h2>
-            <h2>1,</h2>
-            <p>Discordで<strong>@kina_int3 </strong>にDM(ダイレクトメッセージ)を送信する。</p>
-            <h2>2,</h2>
-            <p>Discordサーバーの専用チャンネル(#お問い合わせ)へ送信する。</p>
-        </div>
-    </div>
-      </section>
 <script src="index.js"></script>
 </body>
 </html>
